tests/vrs/interface/parts/writeactions_01_missing_separator_expected.txt
error: expected `;`, found `A`
     --> tests/vrs/interface/parts/writeactions_01_missing_separator.vrs:1:24
      |
    1 |  WriteActions { A -> B  A -> B; }
      |                         ^ help: add `;` here.
